src/main/gen/io/gluon/collider/datascript/parser/DatascriptParser.java
// This is a generated file. Not intended for manual editing.
package io.gluon.collider.datascript.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.gluon.collider.datascript.psi.DatascriptTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DatascriptParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return qualifiedName(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(QUERY_GENERATOR, REPO_ELEMENT),
    create_token_set_(SQL_AND_EXPRESSION, SQL_BETWEEN_EXPRESSION, SQL_COLUMN_REF_EXPRESSION, SQL_COMPARISON_EXPRESSION,
      SQL_COUNT_FUNCTION_EXPRESSION, SQL_DATE_LITERAL_EXPRESSION, SQL_EXPRESSION, SQL_FUNCTION_EXPRESSION,
      SQL_INT_LITERAL_EXPRESSION, SQL_IN_EXPRESSION, SQL_MUL_OR_DIV_EXPRESSION, SQL_NOT_EXPRESSION,
      SQL_NULL_LITERAL_EXPRESSION, SQL_OR_EXPRESSION, SQL_PARAMETER_EXPRESSION, SQL_PARANTHESIS_EXPRESSION,
      SQL_PLUS_OR_MINUS_EXPRESSION, SQL_STRING_LITERAL_EXPRESSION, SQL_SYS_DATE_LITERAL_EXPRESSION),
  };

  /* ********************************************************** */
  // AS ID
  public static boolean aliasClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasClause")) return false;
    if (!nextTokenIs(b, AS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, AS, ID);
    exit_section_(b, m, ALIAS_CLAUSE, r);
    return r;
  }

  /* ********************************************************** */
  // ALL | DISTINCT
  public static boolean allDistinct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allDistinct")) return false;
    if (!nextTokenIs(b, "<all distinct>", ALL, DISTINCT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALL_DISTINCT, "<all distinct>");
    r = consumeToken(b, ALL);
    if (!r) r = consumeToken(b, DISTINCT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // <<param>> ( ',' <<param>> ) *
  static boolean comma_separated_list(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = _param.parse(b, l);
    r = r && comma_separated_list_1(b, l + 1, _param);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( ',' <<param>> ) *
  private static boolean comma_separated_list_1(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!comma_separated_list_1_0(b, l + 1, _param)) break;
      if (!empty_element_parsed_guard_(b, "comma_separated_list_1", c)) break;
    }
    return true;
  }

  // ',' <<param>>
  private static boolean comma_separated_list_1_0(PsiBuilder b, int l, Parser _param) {
    if (!recursion_guard_(b, l, "comma_separated_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && _param.parse(b, l);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // CONNECT ID STRING
  public static boolean connection(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "connection")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONNECTION, "<connection>");
    r = consumeTokens(b, 1, CONNECT, ID, STRING);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, DatascriptParser::namespaceRecover);
    return r || p;
  }

  /* ********************************************************** */
  // sqlType | ID
  public static boolean dataType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dataType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DATA_TYPE, "<data type>");
    r = sqlType(b, l + 1);
    if (!r) r = consumeToken(b, ID);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // NAMESPACE qualifiedName connection? namespaceElement*
  public static boolean datascriptFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "datascriptFile")) return false;
    if (!nextTokenIs(b, NAMESPACE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DATASCRIPT_FILE, null);
    r = consumeToken(b, NAMESPACE);
    p = r; // pin = 1
    r = r && report_error_(b, qualifiedName(b, l + 1));
    r = p && report_error_(b, datascriptFile_2(b, l + 1)) && r;
    r = p && datascriptFile_3(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // connection?
  private static boolean datascriptFile_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "datascriptFile_2")) return false;
    connection(b, l + 1);
    return true;
  }

  // namespaceElement*
  private static boolean datascriptFile_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "datascriptFile_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!namespaceElement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "datascriptFile_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (qualifiedName|subSelect) aliasClause?
  public static boolean entitySelector(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entitySelector")) return false;
    if (!nextTokenIs(b, "<entity selector>", ID, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENTITY_SELECTOR, "<entity selector>");
    r = entitySelector_0(b, l + 1);
    r = r && entitySelector_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // qualifiedName|subSelect
  private static boolean entitySelector_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entitySelector_0")) return false;
    boolean r;
    r = qualifiedName(b, l + 1);
    if (!r) r = subSelect(b, l + 1);
    return r;
  }

  // aliasClause?
  private static boolean entitySelector_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "entitySelector_1")) return false;
    aliasClause(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // FETCH LIST prefetchStatement?
  public static boolean fetchList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetchList")) return false;
    if (!nextTokenIs(b, FETCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FETCH, LIST);
    r = r && fetchList_2(b, l + 1);
    exit_section_(b, m, FETCH_LIST, r);
    return r;
  }

  // prefetchStatement?
  private static boolean fetchList_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetchList_2")) return false;
    prefetchStatement(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // FETCH ONE
  public static boolean fetchOne(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetchOne")) return false;
    if (!nextTokenIs(b, FETCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FETCH, ONE);
    exit_section_(b, m, FETCH_ONE, r);
    return r;
  }

  /* ********************************************************** */
  // FETCH STREAM prefetchStatement?
  public static boolean fetchStream(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetchStream")) return false;
    if (!nextTokenIs(b, FETCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, FETCH, STREAM);
    r = r && fetchStream_2(b, l + 1);
    exit_section_(b, m, FETCH_STREAM, r);
    return r;
  }

  // prefetchStatement?
  private static boolean fetchStream_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fetchStream_2")) return false;
    prefetchStatement(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // FROM <<comma_separated_list ( entitySelector )>>
  public static boolean fromClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fromClause")) return false;
    if (!nextTokenIs(b, FROM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FROM);
    r = r && comma_separated_list(b, l + 1, DatascriptParser::fromClause_1_0);
    exit_section_(b, m, FROM_CLAUSE, r);
    return r;
  }

  // ( entitySelector )
  private static boolean fromClause_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fromClause_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = entitySelector(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // fromClause joinClause* whereClause? groupClause? orderClause? selectClause
  public static boolean fullSelect(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fullSelect")) return false;
    if (!nextTokenIs(b, FROM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = fromClause(b, l + 1);
    r = r && fullSelect_1(b, l + 1);
    r = r && fullSelect_2(b, l + 1);
    r = r && fullSelect_3(b, l + 1);
    r = r && fullSelect_4(b, l + 1);
    r = r && selectClause(b, l + 1);
    exit_section_(b, m, FULL_SELECT, r);
    return r;
  }

  // joinClause*
  private static boolean fullSelect_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fullSelect_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!joinClause(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "fullSelect_1", c)) break;
    }
    return true;
  }

  // whereClause?
  private static boolean fullSelect_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fullSelect_2")) return false;
    whereClause(b, l + 1);
    return true;
  }

  // groupClause?
  private static boolean fullSelect_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fullSelect_3")) return false;
    groupClause(b, l + 1);
    return true;
  }

  // orderClause?
  private static boolean fullSelect_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fullSelect_4")) return false;
    orderClause(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // GROUP BY <<comma_separated_list ( sqlExpression )>> havingClause?
  public static boolean groupClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupClause")) return false;
    if (!nextTokenIs(b, GROUP)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, GROUP, BY);
    r = r && comma_separated_list(b, l + 1, DatascriptParser::groupClause_2_0);
    r = r && groupClause_3(b, l + 1);
    exit_section_(b, m, GROUP_CLAUSE, r);
    return r;
  }

  // ( sqlExpression )
  private static boolean groupClause_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupClause_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = sqlExpression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // havingClause?
  private static boolean groupClause_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "groupClause_3")) return false;
    havingClause(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // HAVING sqlExpression
  public static boolean havingClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "havingClause")) return false;
    if (!nextTokenIs(b, HAVING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, HAVING);
    r = r && sqlExpression(b, l + 1);
    exit_section_(b, m, HAVING_CLAUSE, r);
    return r;
  }

  /* ********************************************************** */
  // JOIN (qualifiedName|subSelect) aliasClause ON sqlExpression
  public static boolean joinClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "joinClause")) return false;
    if (!nextTokenIs(b, JOIN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, JOIN);
    r = r && joinClause_1(b, l + 1);
    r = r && aliasClause(b, l + 1);
    r = r && consumeToken(b, ON);
    r = r && sqlExpression(b, l + 1);
    exit_section_(b, m, JOIN_CLAUSE, r);
    return r;
  }

  // qualifiedName|subSelect
  private static boolean joinClause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "joinClause_1")) return false;
    boolean r;
    r = qualifiedName(b, l + 1);
    if (!r) r = subSelect(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // repositoryDefinition
  static boolean namespaceElement(PsiBuilder b, int l) {
    return repositoryDefinition(b, l + 1);
  }

  /* ********************************************************** */
  // !REPOSITORY
  static boolean namespaceRecover(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "namespaceRecover")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, REPOSITORY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ORDER BY <<comma_separated_list ( sortSpecification )>>
  public static boolean orderClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "orderClause")) return false;
    if (!nextTokenIs(b, ORDER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, ORDER, BY);
    r = r && comma_separated_list(b, l + 1, DatascriptParser::orderClause_2_0);
    exit_section_(b, m, ORDER_CLAUSE, r);
    return r;
  }

  // ( sortSpecification )
  private static boolean orderClause_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "orderClause_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = sortSpecification(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PREFETCH INT ROWS
  public static boolean prefetchStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "prefetchStatement")) return false;
    if (!nextTokenIs(b, PREFETCH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, PREFETCH, INT, ROWS);
    exit_section_(b, m, PREFETCH_STATEMENT, r);
    return r;
  }

  /* ********************************************************** */
  // ID ('.' ID)*
  static boolean qualifiedName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "qualifiedName")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && qualifiedName_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('.' ID)*
  private static boolean qualifiedName_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "qualifiedName_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!qualifiedName_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "qualifiedName_1", c)) break;
    }
    return true;
  }

  // '.' ID
  private static boolean qualifiedName_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "qualifiedName_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // fetchOne | fetchList | fetchStream
  static boolean queryFetch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryFetch")) return false;
    if (!nextTokenIs(b, FETCH)) return false;
    boolean r;
    r = fetchOne(b, l + 1);
    if (!r) r = fetchList(b, l + 1);
    if (!r) r = fetchStream(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // PREPARED? QUERY ID queryParametersList? '{' fullSelect '}' queryFetch?
  public static boolean queryGenerator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryGenerator")) return false;
    if (!nextTokenIs(b, "<query generator>", PREPARED, QUERY)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, QUERY_GENERATOR, "<query generator>");
    r = queryGenerator_0(b, l + 1);
    r = r && consumeTokens(b, 0, QUERY, ID);
    r = r && queryGenerator_3(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    r = r && fullSelect(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    r = r && queryGenerator_7(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // PREPARED?
  private static boolean queryGenerator_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryGenerator_0")) return false;
    consumeToken(b, PREPARED);
    return true;
  }

  // queryParametersList?
  private static boolean queryGenerator_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryGenerator_3")) return false;
    queryParametersList(b, l + 1);
    return true;
  }

  // queryFetch?
  private static boolean queryGenerator_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryGenerator_7")) return false;
    queryFetch(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ID dataType
  public static boolean queryParameter(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryParameter")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && dataType(b, l + 1);
    exit_section_(b, m, QUERY_PARAMETER, r);
    return r;
  }

  /* ********************************************************** */
  // '(' <<comma_separated_list ( queryParameter )>> ')'
  public static boolean queryParametersList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryParametersList")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && comma_separated_list(b, l + 1, DatascriptParser::queryParametersList_1_0);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, QUERY_PARAMETERS_LIST, r);
    return r;
  }

  // ( queryParameter )
  private static boolean queryParametersList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "queryParametersList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = queryParameter(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // queryGenerator
  public static boolean repoElement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "repoElement")) return false;
    if (!nextTokenIs(b, "<repo element>", PREPARED, QUERY)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, REPO_ELEMENT, "<repo element>");
    r = queryGenerator(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // REPOSITORY ID '{' repoElement* '}'
  public static boolean repositoryDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "repositoryDefinition")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, REPOSITORY_DEFINITION, "<repository definition>");
    r = consumeTokens(b, 1, REPOSITORY, ID, LBRACE);
    p = r; // pin = 1
    r = r && report_error_(b, repositoryDefinition_3(b, l + 1));
    r = p && consumeToken(b, RBRACE) && r;
    exit_section_(b, l, m, r, p, DatascriptParser::namespaceRecover);
    return r || p;
  }

  // repoElement*
  private static boolean repositoryDefinition_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "repositoryDefinition_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!repoElement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "repositoryDefinition_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // SELECT allDistinct? selectListClause
  public static boolean selectClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectClause")) return false;
    if (!nextTokenIs(b, SELECT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SELECT);
    r = r && selectClause_1(b, l + 1);
    r = r && selectListClause(b, l + 1);
    exit_section_(b, m, SELECT_CLAUSE, r);
    return r;
  }

  // allDistinct?
  private static boolean selectClause_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectClause_1")) return false;
    allDistinct(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ID ('.' ID)?
  static boolean selectIdentifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectIdentifier")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    r = r && selectIdentifier_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('.' ID)?
  private static boolean selectIdentifier_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectIdentifier_1")) return false;
    selectIdentifier_1_0(b, l + 1);
    return true;
  }

  // '.' ID
  private static boolean selectIdentifier_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectIdentifier_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, ID);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<comma_separated_list ( selectIdentifier )>>
  public static boolean selectListClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectListClause")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comma_separated_list(b, l + 1, DatascriptParser::selectListClause_0_0);
    exit_section_(b, m, SELECT_LIST_CLAUSE, r);
    return r;
  }

  // ( selectIdentifier )
  private static boolean selectListClause_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "selectListClause_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = selectIdentifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASC|DESC
  public static boolean sortOrder(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "sortOrder")) return false;
    if (!nextTokenIs(b, "<sort order>", ASC, DESC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, SORT_ORDER, "<sort order>");
    r = consumeToken(b, ASC);
    if (!r) r = consumeToken(b, DESC);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
